--- a/index.html
+++ b/index.html
@@ -5,11 +5,197 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link type="text/css" rel="stylesheet" href="css/reset.css">
+    <link type="text/css" rel="stylesheet" href="css/style.css">
     <title>Car Sharing</title>
 </head>
 <body>
-    <header>
-
-    </header>
+<section class="main-section">
+    <div class="main-section__wrapper">
+        <header class="main-section__header">
+            <div class="container">
+                <div class="main-section__header_wrapper">
+                    <div class="main-section__logo logo">
+                        <img src="images/icon-logo-normal.svg" alt="logo">
+                        <span>Car</span> sharing
+                    </div>
+                    <nav class="main-section__header__navigation">
+                        <ol class="main-section__navigation__list">
+                            <li><a href="">Home</a></li>
+                            <li><a href="">Blog</a></li>
+                            <li><a href="">Service</a></li>
+                            <li><a href="">Contact</a></li>
+                        </ol>
+                    </nav>
+                </div>
+            </div>
+        </header>
+        <div class="main-section__content">
+            <div class="container">
+                <div class="main-section__content__wrapper">
+                    <h1>Car sharing</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        ut
+                        aliquip ex ea commodo consequat.</p>
+                    <div class="main-section__content__buttons">
+                        <a href="#" class="btn btn-red btn-xl">Share a car</a>
+                        <a href="#" class="btn btn-white btn-xl">Key feature</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="main-section__content__arrow-button">
+        <button class="btn btn-red btn-circle bounce">
+            <img src="images/icon-arrow-down.svg" alt="arrow-down">
+        </button>
+    </div>
+</section>
+<section class="blog-section">
+    <div class="container">
+        <div class="blog-section__content">
+            <h2>Blog</h2>
+            <div class="blog-section__article-list">
+                <article class="blog-section__content__article">
+                    <img src="images/photo1.png" alt="photo1">
+                    <h3>Lorem ipsum sit dolor</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua.</p>
+                    <div>
+                        <a href="#" class="btn btn-red btn-m">Read more</a>
+                    </div>
+                </article>
+                <article class="blog-section__content__article">
+                    <img src="images/photo2.png" alt="photo2">
+                    <h3>Lorem ipsum sit dolor</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua.</p>
+                    <div>
+                        <a href="#" class="btn btn-red btn-m">Read more</a>
+                    </div>
+                </article>
+                <article class="blog-section__content__article">
+                    <img src="images/photo3.png" alt="photo3">
+                    <h3>Lorem ipsum sit dolor</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua.</p>
+                    <div>
+                        <a href="#" class="btn btn-red btn-m">Read more</a>
+                    </div>
+                </article>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="service-section">
+    <div class="container">
+        <div class="service-section__content">
+            <h2>Service</h2>
+            <div class="service-section__article-list">
+                <article class="service-section__content_article">
+                    <img src="images/mini1.png" alt="mini1">
+                    <h3>Lorem ipsum sit dolor</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna.
+                    </p>
+                    <div>
+                        <a href="#" class="btn btn-red btn-m">Read more</a>
+                    </div>
+                </article>
+                <article class="service-section__content_article">
+                    <img src="images/mini2.png" alt="mini2">
+                    <h3>Lorem ipsum sit dolor</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna.
+                    </p>
+                    <div>
+                        <a href="#" class="btn btn-red btn-m">Read more</a>
+                    </div>
+                </article>
+                <article class="service-section__content_article">
+                    <img src="images/mini3.png" alt="mini3">
+                    <h3>Lorem ipsum sit dolor</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna.
+                    </p>
+                    <div>
+                        <a href="#" class="btn btn-red btn-m">Read more</a>
+                    </div>
+                </article>
+                <article class="service-section__content_article">
+                    <img src="images/mini4.png" alt="mini4">
+                    <h3>Lorem ipsum sit dolor</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna.
+                    </p>
+                    <div>
+                        <a href="#" class="btn btn-red btn-m">Read more</a>
+                    </div>
+                </article>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="contact-section">
+    <div class="container">
+        <div class="contact-section__content">
+            <h2>Contact</h2>
+            <div class="contact-section__content__form">
+                <img src="images/form-photo.png" alt="form-photo">
+                <form>
+                    <input type="text" id="name" placeholder="Type your name">
+                    <input type="email" id="email" placeholder="Type your email">
+                    <textarea id="message" placeholder="Type your message"></textarea>
+                    <label class="checkbox">
+                        <input type="checkbox">
+                        <span></span>
+                        I hereby give consent for my personal data included in my application to be processed for the
+                        purposes of the recruitment process under the European Parliament’s and Council of the European
+                        Union Regulation on the Protection of Natural Persons as of 27 April 2016, with regard to the
+                        processing of personal data and on the free movement of such data, and repealing Directive
+                        95/46/EC (Data Protection Directive)
+                    </label>
+                    <div class="contact-section__content__form-button">
+                        <button type="submit" class="btn btn-white btn-m">Send</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+<footer>
+    <div class="container">
+        <div class="footer__content">
+            <div class="footer__logo logo">
+                <img src="images/logo-footer.svg" alt="logo">
+                <span>Car</span>sharing
+            </div>
+            <div class="footer__navigation">
+                <ol class="footer__navigation__list">
+                    <li><a href="">Home page</a></li>
+                    <li><a href="">About us</a></li>
+                    <li><a href="">Gallery</a></li>
+                    <li><a href="">Share regulation</a></li>
+                    <li><a href="">Price</a></li>
+                    <li><a href="">Our fleet</a></li>
+                    <li><a href="">Out clients</a></li>
+                    <li><a href="">Contact</a></li>
+                </ol>
+                <div class="footer__navigation__copyright">
+                    <p>Copyright &copy; Coders Lab</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
