fix issues with buttons and links

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore
                         et dolore magna aliqua.</p>
-                    <div>
-                        <a href="#" class="btn btn-red btn-m">Read more</a>
+                    <div class="btn__wrapper">
+                        <div class="btn btn-red btn-m"><a href="#">Read more</a></div>
                     </div>
                 </article>
                 <article class="blog-section__content__article">
@@ -74,8 +74,8 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore
                         et dolore magna aliqua.</p>
-                    <div>
-                        <a href="#" class="btn btn-red btn-m">Read more</a>
+                    <div class="btn__wrapper">
+                        <div class="btn btn-red btn-m"><a href="#">Read more</a></div>
                     </div>
                 </article>
                 <article class="blog-section__content__article">
@@ -84,8 +84,8 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore
                         et dolore magna aliqua.</p>
-                    <div>
-                        <a href="#" class="btn btn-red btn-m">Read more</a>
+                    <div class="btn__wrapper">
+                        <div class="btn btn-red btn-m"><a href="#">Read more</a></div>
                     </div>
                 </article>
             </div>
@@ -104,8 +104,8 @@
                         labore
                         et dolore magna.
                     </p>
-                    <div>
-                        <a href="#" class="btn btn-red btn-m">Read more</a>
+                    <div class="btn__wrapper btn__center">
+                        <div class="btn btn-red btn-m"><a href="#">Read more</a></div>
                     </div>
                 </article>
                 <article class="service-section__content_article">
@@ -115,8 +115,8 @@
                         labore
                         et dolore magna.
                     </p>
-                    <div>
-                        <a href="#" class="btn btn-red btn-m">Read more</a>
+                    <div class="btn__wrapper btn__center">
+                        <div class="btn btn-red btn-m"><a href="#">Read more</a></div>
                     </div>
                 </article>
                 <article class="service-section__content_article">
@@ -126,8 +126,8 @@
                         labore
                         et dolore magna.
                     </p>
-                    <div>
-                        <a href="#" class="btn btn-red btn-m">Read more</a>
+                    <div class="btn__wrapper btn__center">
+                        <div class="btn btn-red btn-m"><a href="#">Read more</a></div>
                     </div>
                 </article>
                 <article class="service-section__content_article">
@@ -137,8 +137,8 @@
                         labore
                         et dolore magna.
                     </p>
-                    <div>
-                        <a href="#" class="btn btn-red btn-m">Read more</a>
+                    <div class="btn__wrapper btn__center">
+                        <div class="btn btn-red btn-m"><a href="#">Read more</a></div>
                     </div>
                 </article>
             </div>
